--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ DATABASE_NAME=
 DATABASE_USER_NAME=
 DATABASE_HOST=
 DATABASE_PASSWORD=
+
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+
+TELEGRAM_TOKEN=
