--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-DATABASE_NAME=
-DATABASE_USER_NAME=
+POSTGRES_DB=
+POSTGRES_USER=
 DATABASE_HOST=
-DATABASE_PASSWORD=
+POSTGRES_PASSWORD=
 
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
