--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,18 +17,38 @@ services:
     ports:
       - '5431:5431'
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
 
   app:
     build: .
-    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    tty: true
+    command: python3 manage.py migrate && python manage.py runserver 0.0.0.0:8000
     ports:
       - '8001:8000'
+    volumes:
+      - .:/code
     depends_on:
       db:
         condition: service_healthy
+
+  celery:
+    build: .
+    tty: true
+    command: celery -A config worker -l INFO
+    depends_on:
+      - redis
+      - app
+
+  celery_beat:
+    build: .
+    tty: true
+    command: celery -A config beat -l INFO -S django
+    depends_on:
+      - redis
+      - app
+
 volumes:
   pg_data:
