--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,38 +1,39 @@
 version: '3'
 
 services:
-
-  redis:
-    image: redis
-    ports:
-      - '6379:6379'
-
   db:
+    restart: always
     image: postgres
-    environment:
-      - POSTGRES_PASSWORD=mysecretpassword
-      - PGDATA=/var/lib/postgresql/data/pgdata
+    env_file:
+      - .env
+    expose:
+      - '5432'
     volumes:
-      - pg_data:/var/lib/postgresql/data/pgdata
-    ports:
-      - '5431:5431'
+      - postgres_data:/var/lib/postgresql/data/
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 5s
       timeout: 5s
       retries: 5
 
   app:
     build: .
-    tty: true
-    command: python3 manage.py migrate && python manage.py runserver 0.0.0.0:8000
-    ports:
-      - '8001:8000'
-    volumes:
-      - .:/code
     depends_on:
       db:
         condition: service_healthy
+    command: >
+      bash -c "python manage.py makemigrations
+      && python manage.py migrate
+      && python manage.py runserver"
+    ports:
+      - '8000:8000'
+
+  redis:
+    image: redis
+    expose:
+      - '6379'
+    env_file:
+      - .env
 
   celery:
     build: .
@@ -51,4 +52,4 @@ services:
       - app
 
 volumes:
-  pg_data:
+  postgres_data:
