--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
-POSTGRES_DB=
-POSTGRES_USER=
-DATABASE_HOST=
-POSTGRES_PASSWORD=
-
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
-
-CELERY_BROKER_URL=
-CELERY_RESULT_BACKEND=
-
-TELEGRAM_TOKEN=
+SECRET_KEY=''
+POSTGRES_DB=''
+POSTGRES_USER=''
+POSTGRES_PASSWORD=''
+POSTGRES_HOST=''
+POSTGRES_PORT=''
+CELERY_BROKER_URL=''
+CELERY_RESULT_BACKEND=''
