--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ POSTGRES_HOST=''
 POSTGRES_PORT=''
 CELERY_BROKER_URL=''
 CELERY_RESULT_BACKEND=''
+
+EMAIL_SUPERUSER=''
+PASS_SUPERUSER=''
+
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
