--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 
 services:
   db:
@@ -37,19 +37,13 @@ services:
 
   celery:
     build: .
-    tty: true
-    command: celery -A config worker -l INFO
+    command:  >
+      bash -c "celery -A config worker --beat --loglevel=info"
+    volumes:
+      - .:/code
     depends_on:
-      - redis
       - app
-
-  celery_beat:
-    build: .
-    tty: true
-    command: celery -A config beat -l INFO -S django
-    depends_on:
       - redis
-      - app
 
 volumes:
   postgres_data:
