--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
 
   app:
     build: .
+    tty: true
     depends_on:
       db:
         condition: service_healthy
@@ -43,6 +44,13 @@ services:
       - .:/code
     depends_on:
       - app
+      - redis
+
+  celery_beat:
+    build: .
+    tty: true
+    command: celery -A config beat -l INFO -S django
+    depends_on:
       - redis
 
 volumes:
